fix(print): Change Header-Tag to visibility: hidden

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -76,6 +76,10 @@
         visibility: hidden;
     }
 
+    header {
+        visibility: hidden;
+    }
+
     footer {
         visibility: visible;
     }
